--- a/language/i18n_ja.json
+++ b/language/i18n_ja.json
@@ -2235,7 +2235,7 @@
     "diagnosing": "診断中…",
     "new_device_found": "新機器発見",
     "new_device_found_tips": "新機器発見、「Wi-Fi設定」を選択して機器をネットワークに接続。",
-    "set_wifi_uppercase": "Wi－Fi設定",
+    "set_wifi_uppercase": "Wi-Fi設定",
     "full": "満杯",
     "usage_frequency_metrics": "使用頻度",
     "super_cool_upper_camel_case": "急速冷却",
@@ -3374,7 +3374,7 @@
     "automation_condition_des_is_key": "いつ ## です @@ **",
     "centigrade_key": "##℃",
     "fahrenheit_key": "##°F",
-    "enter_city_key": "市を入力してください…",
+    "enter_city_key": "都市を検索",
     "add_key": "追加",
     "select_logic_relation_ship": "ロジック関係を選択",
     "no_scene_key": "シーンなし",
@@ -4003,5 +4003,25 @@
     "CL_DV_OV_check_to_confirm": "オーブンをチェックして確認してください。",
     "CL_CF_CO_buy": "買う",
     "CL_CF_CS_window_ac_step_2": "「接続」ボタンを約 6 秒間押し続けるか、リモコンを受信機に向けて「スイング」ボタンを 6 回押し、ディスプレイに「77」が表示されるか WiFi ライトが点滅し始めるまで押し続けます。",
-    "CL_DV_OV_default_cooking_intensity": "デフォルトの調理強度"
+    "CL_DV_OV_default_cooking_intensity": "デフォルトの調理強度",
+    "CL_DV_HOB_residual_heat_title_pop": "残留熱",
+    "CL_DV_HOB_residual_heat_content_pop": "調理ゾーンはまだ熱いです。熱い調理ゾーンに触れたり、熱に弱いものを置いたりしないように注意してください。",
+    "CL_DV_HOB_hood_mode_setting": "フードモード設定",
+    "CL_DV_HOB_refresh_mode_setting": "リフレッシュモード設定",
+    "CL_DV_HOB_grease_filter_profile": "グリースフィルタープロファイルオプション",
+    "CL_DV_HOB_hood_mode_setting_content": "フードのモードを設定します。フードが自動モードの場合、調理プロセスが始まるとすぐに開始します。",
+    "CL_DV_HOB_hood_mode_setting_hint": "自動モードがオフの場合、モードは手動になります。",
+    "CL_DV_HOB_automatic_mode": "自動モード",
+    "CL_DV_HOB_refresh_setting_hint": "リフレッシュ モードがオンの場合、フードがアクティブになると、アプライアンスは自動的にリフレッシュ モードの使用を開始します。",
+    "CL_DV_HOB_grease_filter_profile_content": "グリースフィルターの寿命を設定します。 \n\n P1 は主に煮沸と軽い揚げ物に使用します。P2 はバランスのとれた煮沸と中程度の揚げ物に使用します。P3 は強めの揚げ物に使用します。",
+    "CL_DV_HOB_hood_mode_manual": "マニュアル",
+    "CL_DV_HOB_remove_accessory_content": "このアクセサリを削除してもよろしいですか?",
+    "CL_DV_HOB_remove_accessory_tips": "アクセサリを削除すると、そのアクセサリのファームウェア アップデートは受信されなくなります。",
+    "CL_DV_HOB_clean_filter": "フィルターを掃除しましたか?",
+    "CL_DV_HOB_clean_filter_content": "フィルターを掃除した後はタイマーをリセットしてください。",
+    "CL_DV_HOB_more_update": "xx さらなるアップデート",
+    "CL_DV_TD_child_lock_tip": "チャイルド ロックは、子供が誤ってサイクルを開始したり変更したりすることを防ぐために、機器のコントロール パネルのボタンを無効にします。 ",
+    "API Testing": "APIテスト",
+    "CL_DV_DW_water_energy": "水とエネルギー",
+    "CL_DV_DW_light_display": "照明とディスプレイ"
 }
