--- a/language/i18n_sv.json
+++ b/language/i18n_sv.json
@@ -2234,7 +2234,7 @@
     "rf_ice_maker_desc": "Låter dig slå på/stänga av din kylskåps ismaskin.",
     "diagnosing": "Diagnostiserar...",
     "new_device_found": "Ny enhet hittades",
-    "new_device_found_tips": "Ny enhet hittades, välj \"SET Wi-Fi\" för att ansluta din enhet till nätverket.",
+    "new_device_found_tips": "Ny enhet hittades, välj \"STÄLL in Wi-Fi\" för att ansluta din enhet till nätverket.",
     "set_wifi_uppercase": "STÄLL in Wi-Fi",
     "full": "Full",
     "usage_frequency_metrics": "Användningsfrekvensmått",
@@ -3374,7 +3374,7 @@
     "automation_condition_des_is_key": "när ## är @@ **",
     "centigrade_key": "##℃",
     "fahrenheit_key": "##°F",
-    "enter_city_key": "Ange stad…",
+    "enter_city_key": "Sök stad",
     "add_key": "Lägg till",
     "select_logic_relation_ship": "Välj logiskt förhållande",
     "no_scene_key": "ingen scen",
@@ -4003,5 +4003,25 @@
     "CL_DV_OV_check_to_confirm": "Kontrollera ugnen för att bekräfta.",
     "CL_CF_CO_buy": "Köpa",
     "CL_CF_CS_window_ac_step_2": "Tryck och håll \"anslut\"-knappen i ca 6 sekunder, eller rikta fjärrkontrollen mot mottagaren och tryck på \"swing\"-knappen 6 gånger, tills displayen visar \"77\" eller WiFi-lampan börjar blinka.",
-    "CL_DV_OV_default_cooking_intensity": "STANDARD TILLAGNINGSINTENSITET"
+    "CL_DV_OV_default_cooking_intensity": "STANDARD TILLAGNINGSINTENSITET",
+    "CL_DV_HOB_residual_heat_title_pop": "Restvärme",
+    "CL_DV_HOB_residual_heat_content_pop": "Kokzonen är fortfarande varm. Var noga med att inte röra vid den varma kokzonen eller placera några värmekänsliga föremål på den.",
+    "CL_DV_HOB_hood_mode_setting": "Inställningar för huvläge",
+    "CL_DV_HOB_refresh_mode_setting": "Inställningar för uppdateringsläge",
+    "CL_DV_HOB_grease_filter_profile": "Alternativ för fettfilterprofil",
+    "CL_DV_HOB_hood_mode_setting_content": "Ställ in huvens läge. När fläkten är i automatiskt läge startar den så snart tillagningsprocessen startar.",
+    "CL_DV_HOB_hood_mode_setting_hint": "Om det automatiska läget är avstängt kommer läget att vara manuellt.",
+    "CL_DV_HOB_automatic_mode": "Automatiskt läge",
+    "CL_DV_HOB_refresh_setting_hint": "Om uppdateringsläget är på, kommer apparaten automatiskt att börja använda uppdateringsläget när fläkten är aktiv.",
+    "CL_DV_HOB_grease_filter_profile_content": "Ställ in fettfiltrets livslängd. \n\n P1 används främst för kokning och lätt stekning. P2 används för balanserad kokning och medelstekning. P3 används för kraftig stekning.",
+    "CL_DV_HOB_hood_mode_manual": "Manuell",
+    "CL_DV_HOB_remove_accessory_content": "Är du säker på att du vill ta bort det här tillbehöret?",
+    "CL_DV_HOB_remove_accessory_tips": "när du tar bort ditt tillbehör kommer du inte längre att få firmwareuppdateringar för det.",
+    "CL_DV_HOB_clean_filter": "HAR DU RENGÖRT FILTRET?",
+    "CL_DV_HOB_clean_filter_content": "Återställ timern efter att du har rengjort filtret.",
+    "CL_DV_HOB_more_update": "xx mer uppdatering",
+    "CL_DV_TD_child_lock_tip": "Barnlås inaktiverar knapparna på apparatens kontrollpanel för att förhindra att barn av misstag startar eller ändrar en cykel. ",
+    "API Testing": "API-testning",
+    "CL_DV_DW_water_energy": "Vatten & Energi",
+    "CL_DV_DW_light_display": "Ljus & Display"
 }
