--- a/language/i18n_uk.json
+++ b/language/i18n_uk.json
@@ -3374,7 +3374,7 @@
     "automation_condition_des_is_key": "коли ## є @@ **",
     "centigrade_key": "##℃",
     "fahrenheit_key": "##°F",
-    "enter_city_key": "Введіть місто…",
+    "enter_city_key": "Пошук міста",
     "add_key": "Додати",
     "select_logic_relation_ship": "Виберіть логічне відношення",
     "no_scene_key": "немає сцени",
@@ -4003,5 +4003,25 @@
     "CL_DV_OV_check_to_confirm": "Перевірте духовку, щоб підтвердити.",
     "CL_CF_CO_buy": "купити",
     "CL_CF_CS_window_ac_step_2": "Натисніть і утримуйте кнопку «підключення» протягом приблизно 6 секунд або спрямуйте пульт дистанційного керування на приймач і натисніть кнопку «гойдання» 6 разів, доки на дисплеї не з’явиться «77» або не почне блимати індикатор WiFi.",
-    "CL_DV_OV_default_cooking_intensity": "ІНТЕНСИВНІСТЬ ГОТУВАННЯ ЗА ПРОМОВЧАННЯМ"
+    "CL_DV_OV_default_cooking_intensity": "ІНТЕНСИВНІСТЬ ГОТУВАННЯ ЗА ПРОМОВЧАННЯМ",
+    "CL_DV_HOB_residual_heat_title_pop": "Залишкове тепло",
+    "CL_DV_HOB_residual_heat_content_pop": "Конфорка ще гаряча. Будьте обережні, не торкайтеся гарячої конфорки та не кладіть на неї чутливі до тепла предмети.",
+    "CL_DV_HOB_hood_mode_setting": "Налаштування режиму витяжки",
+    "CL_DV_HOB_refresh_mode_setting": "Налаштування режиму оновлення",
+    "CL_DV_HOB_grease_filter_profile": "Варіанти профілю жиропоглинаючого фільтра",
+    "CL_DV_HOB_hood_mode_setting_content": "Встановити режим роботи витяжки. Коли витяжка знаходиться в автоматичному режимі, вона запускається, як тільки розпочнеться процес приготування.",
+    "CL_DV_HOB_hood_mode_setting_hint": "Якщо автоматичний режим вимкнено, режим буде ручним.",
+    "CL_DV_HOB_automatic_mode": "Автоматичний режим",
+    "CL_DV_HOB_refresh_setting_hint": "Якщо режим оновлення ввімкнено, прилад автоматично почне використовувати режим оновлення, коли витяжка активна.",
+    "CL_DV_HOB_grease_filter_profile_content": "Встановіть довговічність жиропоглинаючого фільтра. \n\n Р1 використовується в основному для відварювання і легкого смаження. Р2 використовується для збалансованого розварювання і середньої смаження. P3 використовується для сильного смаження.",
+    "CL_DV_HOB_hood_mode_manual": "Інструкція",
+    "CL_DV_HOB_remove_accessory_content": "Ви впевнені, що хочете видалити цей аксесуар?",
+    "CL_DV_HOB_remove_accessory_tips": "після видалення аксесуара ви більше не отримуватимете для нього оновлення мікропрограми.",
+    "CL_DV_HOB_clean_filter": "ЧИСТИЛИ ФІЛЬТР?",
+    "CL_DV_HOB_clean_filter_content": "Після очищення фільтра скиньте таймер.",
+    "CL_DV_HOB_more_update": "xx ще оновлення",
+    "CL_DV_TD_child_lock_tip": "Блокування від дітей вимикає кнопки на панелі керування приладу, щоб діти не могли випадково запустити або змінити цикл. ",
+    "API Testing": "Тестування API",
+    "CL_DV_DW_water_energy": "Вода та енергія",
+    "CL_DV_DW_light_display": "Світло та дисплей"
 }
