--- a/language/i18n_vi.json
+++ b/language/i18n_vi.json
@@ -2234,7 +2234,7 @@
     "rf_ice_maker_desc": "Cho phép bạn Bật/Tắt máy làm đá trong tủ lạnh của bạn.",
     "diagnosing": "Đang chẩn đoán...",
     "new_device_found": "Đã thấy thiết bị mới",
-    "new_device_found_tips": "Đã thấy thiết bị mới, chọn \"SET Wi-Fi\" (ĐẶT Wi-Fi) để kết nối thiết bị của bạn với mạng.",
+    "new_device_found_tips": "Đã thấy thiết bị mới, chọn \"ĐẶT Wi-Fi\" để kết nối thiết bị của bạn với mạng.",
     "set_wifi_uppercase": "ĐẶT Wi-Fi",
     "full": "Đầy",
     "usage_frequency_metrics": "Chỉ số tần suất sử dụng",
@@ -3374,7 +3374,7 @@
     "automation_condition_des_is_key": "khi ## là @@ **",
     "centigrade_key": "##℃",
     "fahrenheit_key": "##°F",
-    "enter_city_key": "Nhập thành phố…",
+    "enter_city_key": "Tìm kiếm thành phố",
     "add_key": "Thêm",
     "select_logic_relation_ship": "Chọn mối quan hệ logic",
     "no_scene_key": "không có cảnh",
@@ -4003,5 +4003,25 @@
     "CL_DV_OV_check_to_confirm": "Kiểm tra lò để xác nhận.",
     "CL_CF_CO_buy": "Mua",
     "CL_CF_CS_window_ac_step_2": "Nhấn và giữ nút “kết nối” trong khoảng 6 giây hoặc hướng bộ điều khiển từ xa vào đầu thu và nhấn nút “xoay” 6 lần cho đến khi màn hình hiển thị “77” hoặc đèn WiFi bắt đầu nhấp nháy.",
-    "CL_DV_OV_default_cooking_intensity": "CƯỜNG ĐỘ NẤU ĂN MẶC ĐỊNH"
+    "CL_DV_OV_default_cooking_intensity": "CƯỜNG ĐỘ NẤU ĂN MẶC ĐỊNH",
+    "CL_DV_HOB_residual_heat_title_pop": "Nhiệt dư",
+    "CL_DV_HOB_residual_heat_content_pop": "Vùng nấu vẫn còn nóng. Hãy cẩn thận không chạm vào vùng nấu nóng hoặc đặt bất kỳ vật dụng nhạy nhiệt nào lên đó.",
+    "CL_DV_HOB_hood_mode_setting": "Cài đặt chế độ hút mùi",
+    "CL_DV_HOB_refresh_mode_setting": "Làm mới cài đặt chế độ",
+    "CL_DV_HOB_grease_filter_profile": "Tùy chọn cấu hình bộ lọc mỡ",
+    "CL_DV_HOB_hood_mode_setting_content": "Cài đặt chế độ của máy hút mùi. Khi máy hút mùi ở chế độ tự động, nó sẽ bắt đầu ngay khi quá trình nấu bắt đầu.",
+    "CL_DV_HOB_hood_mode_setting_hint": "Nếu chế độ tự động tắt, chế độ sẽ là thủ công.",
+    "CL_DV_HOB_automatic_mode": "Chế độ tự động",
+    "CL_DV_HOB_refresh_setting_hint": "Nếu chế độ làm mới được bật, thiết bị sẽ tự động bắt đầu sử dụng chế độ Làm mới khi máy hút mùi hoạt động.",
+    "CL_DV_HOB_grease_filter_profile_content": "Thiết lập tuổi thọ của bộ lọc mỡ. \n\n P1 chủ yếu dùng để luộc và chiên nhẹ. P2 dùng để luộc cân bằng và chiên vừa. P3 dùng để chiên nặng.",
+    "CL_DV_HOB_hood_mode_manual": "Thủ công",
+    "CL_DV_HOB_remove_accessory_content": "Bạn có chắc chắn muốn xóa phụ kiện này không?",
+    "CL_DV_HOB_remove_accessory_tips": "khi bạn tháo phụ kiện ra, bạn sẽ không còn nhận được bản cập nhật phần mềm cho phụ kiện đó nữa.",
+    "CL_DV_HOB_clean_filter": "BẠN ĐÃ VỆ SINH BỘ LỌC CHƯA?",
+    "CL_DV_HOB_clean_filter_content": "Đặt lại bộ hẹn giờ sau khi bạn đã vệ sinh bộ lọc.",
+    "CL_DV_HOB_more_update": "xx cập nhật thêm",
+    "CL_DV_TD_child_lock_tip": "Khóa trẻ em sẽ vô hiệu hóa các nút trên bảng điều khiển của thiết bị để ngăn trẻ em vô tình khởi động hoặc thay đổi chu trình. ",
+    "API Testing": "Kiểm tra API",
+    "CL_DV_DW_water_energy": "Nước và Năng lượng",
+    "CL_DV_DW_light_display": "Ánh sáng & Màn hình"
 }
